docs: avoid layout shift due to badges

--- a/docs/app/main.css
+++ b/docs/app/main.css
@@ -71,6 +71,11 @@ body {
       }
     }
 
+    &:has(img) {
+      display: inline-block;
+      text-decoration: none;
+    }
+
     &:has(del:only-child) {
       text-decoration: none;
     }
@@ -317,6 +322,18 @@ body {
   white-space: nowrap;
 }
 
+.badges {
+  overflow: auto hidden;
+
+  > p {
+    display: flex;
+    gap: 6px;
+    align-items: center;
+    line-height: 1;
+    white-space: nowrap;
+  }
+}
+
 figure.fig-text {
   display: block;
   padding: 0.6rem;
@@ -366,6 +383,15 @@ figure.fig-text {
   .content main {
     > * {
       padding-inline: var(--blockquote-padding-inline);
+    }
+
+    > .badges {
+      padding-inline: 0;
+
+      > p {
+        width: max-content;
+        margin-inline: var(--blockquote-padding-inline);
+      }
     }
 
     > ul,
